# template-web-fastapi

./: .gitignore  AGENTS.md  README.md
.cursor/rules/: backend.mdc  frontend.mdc  general.mdc  non-dev-support.mdc  performance-correctness.mdc  testing.mdc
backend/: .env.example  README.md  pyproject.toml
backend/src/backend/: config.py  database.py  main.py
backend/src/backend/api/: deps.py
backend/src/backend/api/v1/: router.py
backend/src/backend/api/v1/endpoints/: health.py
frontend/: .env.example  package-lock.json  package.json
frontend/src/api/: client.ts  health.ts
frontend/src/components/: landing-page.tsx
